Change Route entity structure
